resources/eks.yml
apiVersion: v1    
  kind: ProviderConfig
  metadata:
    name: aws-eks
    namespace: crossplane
spec:
  credentials:
    source: Secret
    secretRef:
      namespace:
      name:
      key: credentials
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-private
spec:
  providerConfigRef:
    name: aws-provider
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: dev-nat
    region: ap-southeast-1
    routeTableIdRef:
      name: dev-private
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-public
spec:
  providerConfigRef:
    name: aws-provider
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: dev-igw
    region: ap-southeast-1
    routeTableIdRef:
      name: dev-public
---
